<resources>
    <string name="app_name">MyNews</string>

    <string name="image_default_description">Article image</string>

    <!-- Tool bar -->
    <string name="parameters">Parameters</string>
    <string name="search">Search</string>

    <!-- Search / Notification activity -->
    <string name="editTextQuery">Search query term</string>
    <string name="begin_date">Begin Date</string>
    <string name="end_date">End Date</string>
    <string name="arts">Arts</string>
    <string name="business">Business</string>
    <string name="entrepreneurs">Entrepreneurs</string>
    <string name="travel">Travel</string>
    <string name="sports">Sports</string>
    <string name="politics">Politics</string>
    <string name="searchButton">SEARCH</string>
    <string name="enable_notificationsSwitch">Enable notifications (once per day)</string>
    <string name="ErrorNotEnoughInformation">Need query and at least one box checked</string>
    <string name="ErrorDatesIncorrect">You may have selected wrong dates or the begin date is after the end date</string>
    <string name="NoResultFound">No result found with this query</string>
    <string name="NotificationActivated">Notification Activated</string>
    <string name="NotificationCancelled">Notification Cancelled</string>

    <!-- Menu -->
    <string name="notification">Notification</string>
    <string name="help">Help</string>
    <string name="about">About</string>

    <string name="channel_name">default</string>
    <string name="channel_description">default channel</string>

    <!-- Help / About Activity -->
    <string name="aboutText">MyNews regroups all the articles that may interest you in some
...
