...
        android:icon="@drawable/ic_search_white"
        app:showAsAction="ifRoom"
        android:title="@string/search">
    </item>

    <item
        android:id="@+id/menu_activity_main_params"
        android:icon="@drawable/ic_more_vert_white"
        app:showAsAction="ifRoom"
        android:title="@string/parameters">
        <menu>
            <item
                android:id="@+id/menu_notification"
...
