...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Controllers.Activities.SearchAndNotificationActivity">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <EditText
        android:id="@+id/searchActivity_editText_query"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/editTextQuery"
        android:inputType="text" />
...
                android:layout_weight="1"/>
        </TableRow>

        <TableRow
            android:layout_marginTop="8dp">
            <CheckBox
                android:id="@+id/searchActivity_checkBox_arts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/arts"
                android:layout_weight="1"/>
            <CheckBox
                android:id="@+id/searchActivity_checkBox_politics"
...
                android:id="@+id/searchActivity_checkBox_business"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/business"
                android:layout_weight="1"/>
            <CheckBox
                android:id="@+id/searchActivity_checkBox_sports"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sports"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow
            android:layout_marginTop="8dp">
            <CheckBox
                android:id="@+id/searchActivity_checkBox_entrepreneurs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/entrepreneurs"
                android:layout_weight="1"/>
            <CheckBox
                android:id="@+id/searchActivity_checkBox_travel"
...
        android:text="@string/searchButton"
        android:textStyle="bold"
        android:textColor="@color/textColor"
        android:background="@color/colorPrimary"/>

    <Switch
        android:id="@+id/searchActivity_switchNotification"
        android:visibility="gone"
        android:text="@string/enable_notificationsSwitch"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
...
